<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            style="@style/AllTexts"
            android:layout_marginTop="16dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/cbWhippedCream"
            style="@style/AllCheckboxes"
            android:text="@string/whipped_cream" />

        <CheckBox
            android:id="@+id/cbChocolate"
            style="@style/AllCheckboxes"
            android:text="@string/chocolate" />


        <TextView
            style="@style/AllTexts"
            android:layout_marginTop="16dp"
            android:text="@string/qty" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:onClick="incrementQty"
                android:text="@string/plus"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/qty_number"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:onClick="decrementQty"
                android:text="@string/minus"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            style="@style/AllButtons"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>